--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <!--<td width=300px align=left>-->
                     <!-- <a href="http://arxiv.org/pdf/1603.08511.pdf"> -->
                   <!-- <td><a href="#"><img class="layered-paper-big" style="height:175px" src="./resources/images/paper.png"/></a></td> -->
-                  <td><a href="#"><img style="height:180px" src="./resources/images/paper.png"/></a></td>
+                  <td><a href="https://arxiv.org/pdf/1712.01812.pdf"><img style="height:180px" src="./resources/images/paper.png"/></a></td>
                   <td><span style="font-size:14pt">Tulsiani, Gupta, Fouhey, Efros, Malik.<br><br>
                           Factoring Shape, Pose, and Layout <br>from the 2D Image of a 3D Scene.<br><br>
                   arXiv, Dec 2017.<br>
@@ -206,7 +206,7 @@
           <table align=center width=180px>
               <tr>
                   <td><span style="font-size:14pt"><center>
-                      <a href="#">[pdf]</a>
+                      <a href="https://arxiv.org/pdf/1712.01812.pdf">[pdf]</a>
                     </center></td>
 
                   <td><span style="font-size:14pt"><center>
