--- a/index.html
+++ b/index.html
@@ -164,6 +164,16 @@
         </td>
      </tr>
     </table>
+      
+    <table align=center width=700px>
+  	 <tr>
+		<td align=center width=100px>
+		<center>
+		<span style="font-size:20px">In CVPR, 2018</span>
+		</center>
+		</td>
+	 </tr>
+	</table>
 
             <br>
             <table align=center width=900px>
@@ -196,7 +206,7 @@
                   <td><a href="https://arxiv.org/pdf/1712.01812.pdf"><img style="height:180px" src="./resources/images/paper.png"/></a></td>
                   <td><span style="font-size:14pt">Tulsiani, Gupta, Fouhey, Efros, Malik.<br><br>
                           Factoring Shape, Pose, and Layout <br>from the 2D Image of a 3D Scene.<br><br>
-                  arXiv, Dec 2017.<br>
+                  CVPR, 2018. (to appear)<br>
                   <!-- [hosted on <a href="#">arXiv</a>]</a> -->
                     </td>
               </tr>
@@ -206,7 +216,7 @@
           <table align=center width=180px>
               <tr>
                   <td><span style="font-size:14pt"><center>
-                      <a href="https://arxiv.org/pdf/1712.01812.pdf">[pdf]</a>
+                      <a href="https://arxiv.org/pdf/1712.01812.pdf">[preprint]</a>
                     </center></td>
 
                   <td><span style="font-size:14pt"><center>
