--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <table align=center width=180px>
               <tr>
                   <td><span style="font-size:14pt"><center>
-                      <a href="https://arxiv.org/pdf/1712.01812.pdf">[preprint]</a>
+                      <a href="https://arxiv.org/pdf/1712.01812.pdf">[pdf]</a>
                     </center></td>
 
                   <td><span style="font-size:14pt"><center>
