--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                   <td><a href="https://arxiv.org/pdf/1712.01812.pdf"><img style="height:180px" src="./resources/images/paper.png"/></a></td>
                   <td><span style="font-size:14pt">Tulsiani, Gupta, Fouhey, Efros, Malik.<br><br>
                           Factoring Shape, Pose, and Layout <br>from the 2D Image of a 3D Scene.<br><br>
-                  CVPR, 2018. (to appear)<br>
+                  CVPR, 2018. <br>
                   <!-- [hosted on <a href="#">arXiv</a>]</a> -->
                     </td>
               </tr>
