--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
        <tr>
         <td align=center width=100px>
         <center>
-        <span style="font-size:20px"><a href="http://www.cs.berkeley.edu/~shubhtuls/">Shubham Tulsiani</a></span>
+        <span style="font-size:20px"><a href="hhttps://shubhtuls.github.io/">Shubham Tulsiani</a></span>
         </center>
         </td>
 
